Fix all spacing

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html {
   line-height: 1.5;
 }
 
-*, *:: before, *::after {
+*, *::before, *::after {
   box-sizing: inherit;
 }
 
@@ -25,8 +25,8 @@ html {
   border: 3px solid #e2e2e2;
   border-radius: 10px;
   text-align: left;
-
 }
+
 .cards img {
   display: block;
   margin: 0 auto 1rem;
@@ -37,14 +37,13 @@ html {
   margin-bottom: 1rem;
 
   font-size: 1.125rem;
-
 }
 
 .cards dl {
   margin-bottom: 1rem;
 }
 
-.cards dt{
+.cards dt {
   display: inline-block;
   width: 6em;
   font-style: italic;
@@ -65,9 +64,8 @@ html {
   padding: .5em .75em;
   background-color: #ccc;
   border-radius: 4px;
-  color: #000
+  color: #000;
   text-decoration: none;
-
 }
 
 .cards a:hover {
